tests/regression/errors/basic/import_error_11.csd
// Import error test 11
yeet "nonexistent_module_11"
sus result drip = some_function(11)
